Faces and Fractured Mirrors

--- a/src/familiar-faces.tex
+++ b/src/familiar-faces.tex
@@ -30,7 +30,7 @@ Read down for the value of the first d8, then across for the second.
 
 \startitemize[4]
 \item The audience cares about a character because of what they need and what they're doing about it
-\item Small, engaging details create a spark of humanity
+\item Start with the most fundamental and universal, and work out to the most specific
 \item It's better to start with the wrong answer than an empty page - we can always rewrite what we have
 \item Supporting characters' conflicts and drives should relate to the protagonists' stories
 \stopitemize
@@ -41,8 +41,6 @@ Read down for the value of the first d8, then across for the second.
 
 \page
 
-\section{The Wheel of Emotions}
-
 % "none" means suppress the title
 \placefigure
     [here,none]
@@ -50,11 +48,9 @@ Read down for the value of the first d8, then across for the second.
     {Plutchik's wheel of emotion}
     {\externalfigure[plutchik][type=png]}
 
-\startalignment[middle]
-
-Robert Plutchik's Wheel of Emotions
-
-\stopalignment
+Robert Plutchik's Wheel of Emotions shows how emotions relate to each other,
+both in intensity (the strongest emotions are closest to the center)
+and in nature (an emotion's inverse is on the opposite side of the wheel from it).
 
 \page
 
@@ -103,8 +99,7 @@ they want something, it's hard for them to get it, and
 what they try to do about that is what makes a story.
 
 How many conflicts should you assign to a character?
-If a character doesn't have immediate story importance, you can get away with no conflicts.
-Minor characters might have one conflict.
+Minor characters might have zero or one conflicts.
 Major characters can have two or three.
 
 Characters can have two types of conflicts: internal and external.
@@ -116,15 +111,16 @@ Characters can have two types of conflicts: internal and external.
 To create an internal conflict, choose an emotion from the table above.
 
 Then, name the source or object of that emotion.
-The easiest way is to pick one or more PCs, and look at their backstories, goals, or affiliations.
-You can also pick an issue that's active in the campaign.
+You can choose from protagonist characters' backstories, goals, or affiliations.
+You can also pick an issue that's active in the story.
 Relate the emotion to this thing, the way you created an anchor.
 
 \subsection{External Conflicts}
 
 To create an external conflict, choose an emotion from the table above.
-Next, pick another character or a group as a whole.
-Then, name a shared responsibility, interest, or other activity.
+
+Then, pick another character or a group as a whole.
+Next, name a shared responsibility, interest, or other activity.
 Finally, anchor the conflict by explaining how that shared element
 sparks the chosen emotion in the character.
 
@@ -285,6 +281,32 @@ The Schemer has no good answer for that, and this is probably the root
 of their external conflict with the Magnate.
 
 \page
+
+\section{Faces and Fractured Mirrors}
+
+Many characters in fiction stand in for something larger, such as a government, a religion, or an ideology.
+We learn about those larger things by watching the character.
+For example, in "Star Wars", we see two sides of the Empire through Tarkin and Darth Vader.
+Tarkin represents the banal brutality of a soldier serving under a fascist regime.
+Vader represents the fanatical, emotionally centered Sith religion at the heart of the Empire.
+We can say that they are the {\it faces} of such things in our story.
+
+At the same time, such faces are imperfect reflections, because everyone is an individual.
+Characters with strong loyalty can disagree with their parent entity about something.
+Other times, characters may be unable or unwilling to comply with the demands of that larger force.
+These conflicts between individual and group can tell us about the world as well.
+For example, in "Inception", we learn about the process of extraction by meeting Dom Cobb and his crew.
+But because of his guilt over his wife's fate, Dom can't perform a key step in the process: architecting dreams.
+Thus, we learn about architecting as he explains the process to someone else.
+
+When you are creating such face characters, ask interview questions that tease out these elements.
+How does this character exemplify what they stand in for? How do they contrast against it?
+
+\section{Other Tools}
+
+Many excellent tools can help you further define your character,
+such as \goto{Fantasy Name Generators}[url(https://www.fantasynamegenerators.com/)]
+and \goto{Character Appearance Generator}[url(https://www.rangen.co.uk/chars/appgen.php)].
 
 \section{Acknowledgements}
 
