Feedback from Friday playtest

--- a/src/familiar-faces.tex
+++ b/src/familiar-faces.tex
@@ -21,9 +21,6 @@ There are three steps:
 \item Interview the Character
 \stopitemize
 
-Whenever you are asked to "roll for an emotion", you'll roll 2d8 and consult the table below.
-Read down for the value of the first d8, then across for the second.
-
 \column
 
 \section{Principles}
@@ -37,22 +34,9 @@ Read down for the value of the first d8, then across for the second.
 
 \stopcolumns
 
+\page
+
 \input table
-
-\page
-
-% "none" means suppress the title
-\placefigure
-    [here,none]
-    [fig:plutchik]
-    {Plutchik's wheel of emotion}
-    {\externalfigure[plutchik][type=png]}
-
-Robert Plutchik's Wheel of Emotions shows how emotions relate to each other,
-both in intensity (the strongest emotions are closest to the center)
-and in nature (an emotion's inverse is on the opposite side of the wheel from it).
-
-\page
 
 \section{Anchor the Character}
 
@@ -84,13 +68,17 @@ Roll a d8 and read down, then roll another d8 and read right.
 Finally, relate that emotion back to their reason for being. An easy method is to write a sentence like:
 
 \startitemize[4]
-\item This character is (reason for being) because they feel (emotion)
-\item This character feels (emotion) because they're (reason for being)
+\item {\bf This character is (reason for being) because they feel (emotion)}
+\item {\bf This character feels (emotion) because they're (reason for being)}
 \stopitemize
 
 The resulting sentence is the character's {\gameterm anchor}. The character's actions and reactions should be driven by this anchor.
 
 \stopcolumns
+
+\page
+
+\input table
 
 \section{Create Conflicts}
 
@@ -103,28 +91,43 @@ Minor characters might have zero or one conflicts.
 Major characters can have two or three.
 
 Characters can have two types of conflicts: internal and external.
+When choosing the focal points of conflicts, 
+look at the protagonists' own backgrounds and interests so that they're relatable to the protagonists.
 
 \startcolumns[TwoColumn]
 
 \subsection{Internal Conflicts}
 
-To create an internal conflict, choose an emotion from the table above.
+Internal conflicts are when a character struggles with their own
+emotions, motivations, and desires.
+They might involve other people but they are not conflicts with other people.
 
-Then, name the source or object of that emotion.
-You can choose from protagonist characters' backstories, goals, or affiliations.
-You can also pick an issue that's active in the story.
-Relate the emotion to this thing, the way you created an anchor.
+\startitemize[4]
+\item Choose an emotion from the table above
+\item Name the source or object of that emotion
+\item {\bf Anchor} the emotion to the source or object
+\stopitemize
 
 \subsection{External Conflicts}
 
-To create an external conflict, choose an emotion from the table above.
+External conflicts are disagreements, quarrels, or other struggles
+with another character.
+The other character may or may not feel the conflict as well.
 
-Then, pick another character or a group as a whole.
-Next, name a shared responsibility, interest, or other activity.
-Finally, anchor the conflict by explaining how that shared element
-sparks the chosen emotion in the character.
+\startitemize[4]
+\item Choose an emotion from the table above
+\item Pick another character or a group as a whole
+\item Name a shared responsibility, interest, or other activity
+\item {\bf Anchor} the emotion to the shared element
+\stopitemize
 
 \stopcolumns
+
+{\bf Anchors} relate the emotion and some story element ("I feel X because of this" vs. "I'm conflicted because of this because I feel X").
+
+\page
+
+% Interview the Character
 
 \section{Interview the Character}
 
@@ -169,6 +172,8 @@ interview questions for a supporting character they'll interact with.
 \stopFullPageNarrower
 
 \page
+
+% Example Characters
 
 \section{Example Characters}
 
@@ -282,6 +287,8 @@ of their external conflict with the Magnate.
 
 \page
 
+% Faces and Fractured Mirrors
+
 \section{Faces and Fractured Mirrors}
 
 Many characters in fiction stand in for something larger, such as a government, a religion, or an ideology.
@@ -317,5 +324,22 @@ and is in the public domain.
 
 The header font is Abrakadaboom, designed by \goto{Kurasan}[url(https://www.fontspace.com/abrakadaboom-font-f124405)].
 The body font is \goto{EB Garmond}[url(https://fonts.google.com/specimen/EB+Garamond/license)], under the SIL Open Font license, version 11.
+
+\page
+
+% Wheel of Emotion
+
+% "none" means suppress the title
+\placefigure
+    [here,none]
+    [fig:plutchik]
+    {Plutchik's wheel of emotion}
+    {\externalfigure[plutchik][type=png]}
+
+Robert Plutchik's Wheel of Emotions shows how emotions relate to each other,
+both in intensity (the strongest emotions are closest to the center)
+and in nature (an emotion's inverse is on the opposite side of the wheel from it).
+
+\page
 
 \stoptext
