--- a/src/table.tex
+++ b/src/table.tex
@@ -1,3 +1,6 @@
+Whenever you are asked to "roll for an emotion", you'll roll 2d8 and consult the table below.
+Read down for the value of the first d8, then across for the second.
+
 % Set the table columns to 10% of the total textwidth for the first (the die roll),
 % then 15% thereafter
 \placetable
