Add a placeholder image to the first page

--- a/src/familiar-faces.tex
+++ b/src/familiar-faces.tex
@@ -34,6 +34,15 @@ There are three steps:
 
 \stopcolumns
 
+\vfill
+
+% "none" means suppress the title
+\placefigure
+    [here,none]
+    [fig:front-banner]
+    {Front Banner}
+    {\externalfigure[front-banner][type=png]}
+
 \page
 
 \input table
@@ -68,8 +77,8 @@ Roll a d8 and read down, then roll another d8 and read right.
 Finally, relate that emotion back to their reason for being. An easy method is to write a sentence like:
 
 \startitemize[4]
-\item {\bf This character is (reason for being) because they feel (emotion)}
-\item {\bf This character feels (emotion) because they're (reason for being)}
+\item {\gameterm This character is (reason for being) because they feel (emotion)}
+\item {\gameterm This character feels (emotion) because they're (reason for being)}
 \stopitemize
 
 The resulting sentence is the character's {\gameterm anchor}. The character's actions and reactions should be driven by this anchor.
@@ -91,8 +100,9 @@ Minor characters might have zero or one conflicts.
 Major characters can have two or three.
 
 Characters can have two types of conflicts: internal and external.
-When choosing the focal points of conflicts, 
-look at the protagonists' own backgrounds and interests so that they're relatable to the protagonists.
+The focal point of conflicts - what they're about -
+should be relatable and interesting to the protagonists,
+and be relevant to the story.
 
 \startcolumns[TwoColumn]
 
@@ -105,7 +115,7 @@ They might involve other people but they are not conflicts with other people.
 \startitemize[4]
 \item Choose an emotion from the table above
 \item Name the source or object of that emotion
-\item {\bf Anchor} the emotion to the source or object
+\item {\gameterm Anchor} the emotion to the source or object
 \stopitemize
 
 \subsection{External Conflicts}
@@ -118,12 +128,12 @@ The other character may or may not feel the conflict as well.
 \item Choose an emotion from the table above
 \item Pick another character or a group as a whole
 \item Name a shared responsibility, interest, or other activity
-\item {\bf Anchor} the emotion to the shared element
+\item {\gameterm Anchor} the emotion to the shared element
 \stopitemize
 
 \stopcolumns
 
-{\bf Anchors} relate the emotion and some story element ("I feel X because of this" vs. "I'm conflicted because of this because I feel X").
+{\gameterm Anchors} relate the emotion and some story element ("I feel X because of this" vs. "I'm conflicted because of this because I feel X").
 
 \page
 
@@ -185,17 +195,17 @@ All we know is that all three characters want to change the city somehow.
 
 Let's start with an upper-class character.
 To anchor our character, we roll for an emotion and get 3 and 7.
-This gives us {\bf Optimism}.
+This gives us {\gameterm Optimism}.
 They're optimistic because they have high social status.
 
 We'll give them two external conflicts.
-Rolling, we get 2 and 6: {\bf Apprehension}.
+Rolling, we get 2 and 6: {\gameterm Apprehension}.
 Let's say this is targeted at another well-to-do person, who we'll call the Magnate.
 Their shared interest is the city's economy.
 Thus, the conflict is that the Magnate's recent economic activity worries the Noble.
 
 The second conflict is internal.
-We get a 4 and 8, {\bf Disapproval}.
+We get a 4 and 8, {\gameterm Disapproval}.
 We'll say it's about the people of the city.
 The Noble thinks that the people aren't doing enough to help themselves.
 
@@ -220,19 +230,19 @@ but doesn't follow up personally on how well their money is spent.
 Let's descend the ladder and look for a rabble-rouser or influencer
 who occupies a lower or middle class.
 
-Our anchoring emotional roll is 7 and 8, giving us {\bf Aggression} - very suitable.
+Our anchoring emotional roll is 7 and 8, giving us {\gameterm Aggression} - very suitable.
 It would be easy to say their feelings led to their position,
 but what if we reverse it?
 They are Aggressive because they are a Demagogue.
 
 They have an external conflict and an internal conflict.
-The emotion roll for the external conflict is 6 and 8, giving us {\bf Contempt}.
+The emotion roll for the external conflict is 6 and 8, giving us {\gameterm Contempt}.
 An easy target for their contempt is the Noble we just created.
 Their shared interest is the city's well-being,
 and the Demagogue thinks the Noble's frivolous spending is hurting
 far more than it could help.
 
-For the internal conflict, we roll 3 and 3, getting {\bf Joy}.
+For the internal conflict, we roll 3 and 3, getting {\gameterm Joy}.
 Let's have fun and make this indirectly about the Noble again.
 The Demagogue really liked the bits of the high life they experienced from time to time.
 The conflict is whether it's okay to like fancy parties and dinners
@@ -256,16 +266,16 @@ but is constrained by the need to stay out of trouble.
 Finally, let's look at someone tied to the systems of power, but not part of them.
 This character will be a plotter and manipulator behind the scenes.
 
-Their anchoring emotion is {\bf Sadness}, with a roll of 5 and 3.
+Their anchoring emotion is {\gameterm Sadness}, with a roll of 5 and 3.
 We can say that they took up this life because of that sadness.
 
-They have an external conflict, based on {\bf Admiration}.
+They have an external conflict, based on {\gameterm Admiration}.
 We'll say that this is directed at a character we introduced in the Noble's creation: the Magnate.
 The shared interest is in personal wealth and power.
 So what's the issue? We'll say that the Schemer likes how the Magnate gets things done,
 but that their own plans need the Magnate to go down as well.
 
-They have an internal conflict. On a 6 and 1, this is based on {\bf Loathing}.
+They have an internal conflict. On a 6 and 1, this is based on {\gameterm Loathing}.
 We'll tie this to the overall issue of politics and wealth in the city.
 
 It feels like the Schemer isn't at peace with who and what they are.
