Add PDF bookmarks and tagging

--- a/src/env_book.tex
+++ b/src/env_book.tex
@@ -6,6 +6,8 @@
 % Set up PDF metadata
 \setupinteraction[state=start, title=Familiar Faces, author=Astral Frontier]
 \setupbackend[format=PDF/X-1a:2003, intent=SWOP2006_Coated5v2.icc]
+\placebookmarks[section,subsection][section]
+\setuptagging[state=start]
 
 % Page size is US-Letter
 \setuppapersize[letter,portrait]
