Text cleanups around example characters

--- a/src/familiar-faces.tex
+++ b/src/familiar-faces.tex
@@ -133,7 +133,8 @@ The other character may or may not feel the conflict as well.
 
 \stopcolumns
 
-{\gameterm Anchors} relate the emotion and some story element ("I feel X because of this" vs. "I'm conflicted because of this because I feel X").
+{\gameterm Anchors} relate the emotion and some story element
+({\gameterm "I feel X because of this"} vs. {\gameterm "I'm conflicted because of this because I feel X"}).
 
 \page
 
@@ -196,10 +197,10 @@ All we know is that all three characters want to change the city somehow.
 Let's start with an upper-class character.
 To anchor our character, we roll for an emotion and get 3 and 7.
 This gives us {\gameterm Optimism}.
-They're optimistic because they have high social status.
+They're optimistic because they have high social status: "power solves problems and I have power, so what could go wrong?"
 
-We'll give them two external conflicts.
-Rolling, we get 2 and 6: {\gameterm Apprehension}.
+We'll give them two conflicts: one internal, one external.
+Rolling for the external conflict, we get 2 and 6: {\gameterm Apprehension}.
 Let's say this is targeted at another well-to-do person, who we'll call the Magnate.
 Their shared interest is the city's economy.
 Thus, the conflict is that the Magnate's recent economic activity worries the Noble.
@@ -233,7 +234,7 @@ who occupies a lower or middle class.
 Our anchoring emotional roll is 7 and 8, giving us {\gameterm Aggression} - very suitable.
 It would be easy to say their feelings led to their position,
 but what if we reverse it?
-They are Aggressive because they are a Demagogue.
+They are Aggressive because they are a Demagogue: "this job has really opened my eyes to what's wrong".
 
 They have an external conflict and an internal conflict.
 The emotion roll for the external conflict is 6 and 8, giving us {\gameterm Contempt}.
@@ -267,7 +268,7 @@ Finally, let's look at someone tied to the systems of power, but not part of the
 This character will be a plotter and manipulator behind the scenes.
 
 Their anchoring emotion is {\gameterm Sadness}, with a roll of 5 and 3.
-We can say that they took up this life because of that sadness.
+We can say that they took up this life because of that sadness: "never again, no matter the cost".
 
 They have an external conflict, based on {\gameterm Admiration}.
 We'll say that this is directed at a character we introduced in the Noble's creation: the Magnate.
